<resources>
    <string name="app_name">WeatherApp</string>
    <string name="btn_menu_skip">skip</string>
    <string name="text1">В данном приложении вы можете учиться</string>
    <string name="text2">В данном приложении вы можете обновлять</string>
    <string name="text3">В данном приложении вы можете удалять</string>
    <string name="text4">Спасибо что вы с нами</string>
    <string name="txt_button">Далее</string>
    <string name="txt_button2">Старт</string>
    <string name="txt_weather_week">This Week</string>
    <string name="txt_now">Now</string>
    <string name="txt_today">Today</string>
    <string name="weather_today">weather_today</string>
    <string name="weather_ms">SW 4m/s</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise_time">21:00</string>
    <string name="air_quality_index">30</string>
    <string name="air_quality_index_txt">Air Quality Index</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity_percent">81%</string>
    <string name="wind">Wind</string>
    <string name="weather_type">Weather type</string>
    <string name="today">Today</string>
    <string name="weather_tday_degree">28</string>
    <string name="pressure">1010</string>
    <string name="max">Max</string>
    <string name="pressure_weather">Pressure</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="cloudiness_percent">100%</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_time">18:00</string>
    <string name="air_quality">Air Quality</string>
    <string name="air_quality_txt">Good</string>
    <string name="weather_degreee">235F</string>
    <string name="day_weather">30</string>
    <string name="days_weather_current">18</string>
    <string name="days_weather_forecast">15</string>
    <string name="days_weather_min">56</string>
    <string name="wind_speed">%s m/s</string>
    <string name="percent">%s  %%</string>
    <string name="celsius_degree">%s  °</string>
    <string name="pressure_sign">%s  mb</string>
    <string name="vice_city">Vice City</string>
    <string name="set_Title">MapBox!!!</string>
    <string name="set_Message">Set this Location ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="metric">metric</string>
    <string name="location">Нужен доступ к местоположению</string>
    <string name="attention">Внимание!!!</string>
    <string name="location_access">Доступ к местоположению</string>

</resources>
